--- a/gallery.html
+++ b/gallery.html
@@ -97,53 +97,53 @@ body {
 <!-- The four columns -->
 <div class="row">
   <div class="column">
-    <img src="images/openstudios1.jpg" alt="Senior Installation at SVA Open Studios, March 2022." style="width:100%" onclick="myFunction(this);">
+    <img src="Images/Openstudios1.jpg" alt="Senior Installation at SVA Open Studios, March 2022." style="width:100%" onclick="myFunction(this);">
   </div>
 
   <div class="column">
-    <img src="images/openstudios2.jpg" alt="Senior Installation at SVA Open Studios, March 2022." style="width:100%" onclick="myFunction(this);">
-  </div>
-
-
-
-  <div class="column">
-    <img src="images/table1.jpg" alt="TIG welded, CNC plasma cut coffee table with inset lightbox, 2022." style="width:100%" onclick="myFunction(this);">
-  </div>
-  <div class="column">
-    <img src="images/table2.jpg" alt="TIG welded, CNC plasma cut coffee table with inset lightbox, 2022." style="width:100%" onclick="myFunction(this);">
-  </div>
-  <div class="column">
-    <img src="images/table3.jpg" alt="TIG welded, CNC plasma cut coffee table with inset lightbox, 2022." style="width:100%" onclick="myFunction(this);">
-  </div>
-  <div class="column">
-    <img src="images/pedestal.jpg" alt="CNC plasma-cut pedestal with rotating salt lamp, 2022." style="width:100%" onclick="myFunction(this);">
-  </div>
-  <div class="column">
-    <img src="images/starterpackimg.jpg" alt="Still Life: Starterpack, 2022. Featured on Do Not Research, 2022. Inkjet print on transparency film, Rockite cement, pink marble, glass found in Dead Horse Bay, found lightbox with auditory and moving parts, plasma cut welded steel, oil on linen, oil on canvas, 3D rendering, found photographs " style="width:100%" onclick="myFunction(this);">
-  </div>
-  <div class="column">
-    <img src="images/antimg.jpg" alt="Thief, 2022. CNC-routed plywood, plaster, steel dust, steel wool, polished steel, found glass from Dead Horse Bay, video, hand-made ant costume" style="width:100%" onclick="myFunction(this);">
+    <img src="Images/Openstudios2.jpg" alt="Senior Installation at SVA Open Studios, March 2022." style="width:100%" onclick="myFunction(this);">
   </div>
 
 
 
   <div class="column">
-    <img src="images/scavenger.jpg" alt="Scavenger, 2022. Oil on linen mounted on wooden frame." style="width:100%" onclick="myFunction(this);">
+    <img src="Images/table1.jpg" alt="TIG welded, CNC plasma cut coffee table with inset lightbox, 2022." style="width:100%" onclick="myFunction(this);">
   </div>
   <div class="column">
-    <img src="images/cullen.jpg" alt="Oil painting study, 2020." style="width:100%" onclick="myFunction(this);">
+    <img src="Images/table2.jpg" alt="TIG welded, CNC plasma cut coffee table with inset lightbox, 2022." style="width:100%" onclick="myFunction(this);">
   </div>
   <div class="column">
-    <img src="images/salt.jpg" alt="Work, 2017." style="width:100%" onclick="myFunction(this);">
+    <img src="Images/table3.jpg" alt="TIG welded, CNC plasma cut coffee table with inset lightbox, 2022." style="width:100%" onclick="myFunction(this);">
+  </div>
+  <div class="column">
+    <img src="Images/Pedestal.jpg" alt="CNC plasma-cut pedestal with rotating salt lamp, 2022." style="width:100%" onclick="myFunction(this);">
+  </div>
+  <div class="column">
+    <img src="Images/starterpackimg.jpg" alt="Still Life: Starterpack, 2022. Featured on Do Not Research, 2022. Inkjet print on transparency film, Rockite cement, pink marble, glass found in Dead Horse Bay, found lightbox with auditory and moving parts, plasma cut welded steel, oil on linen, oil on canvas, 3D rendering, found photographs " style="width:100%" onclick="myFunction(this);">
+  </div>
+  <div class="column">
+    <img src="Images/antimg.jpg" alt="Thief, 2022. CNC-routed plywood, plaster, steel dust, steel wool, polished steel, found glass from Dead Horse Bay, video, hand-made ant costume" style="width:100%" onclick="myFunction(this);">
+  </div>
+
+
+
+  <div class="column">
+    <img src="Images/scavenger.jpg" alt="Scavenger, 2022. Oil on linen mounted on wooden frame." style="width:100%" onclick="myFunction(this);">
+  </div>
+  <div class="column">
+    <img src="Images/cullen.jpg" alt="Oil painting study, 2020." style="width:100%" onclick="myFunction(this);">
+  </div>
+  <div class="column">
+    <img src="Images/salt.jpg" alt="Work, 2017." style="width:100%" onclick="myFunction(this);">
   </div>
 
   <div class="column">
-    <img src="images/espr.jpg" alt="Installation view at Extra Strength Pain Relief at 520 W 26th St, 2022." style="width:100%" onclick="myFunction(this);">
+    <img src="Images/ESPR.jpg" alt="Installation view at Extra Strength Pain Relief at 520 W 26th St, 2022." style="width:100%" onclick="myFunction(this);">
   </div>
 </div>
 
 <div class="column">
-  <img src="images/constellations.jpg" alt="Installation view at Constellations at the SVA Gallery, 2019." style="width:100%" onclick="myFunction(this);">
+  <img src="Images/constellations.jpg" alt="Installation view at Constellations at the SVA Gallery, 2019." style="width:100%" onclick="myFunction(this);">
 </div>
 
 <!-- <div class="column">
@@ -152,17 +152,17 @@ body {
 
 
 <div class="column">
-  <img src="images/1.jpg" alt="Installation view of Seeking Lavrentiya, a solo show inside a shipping container, 2017." style="width:100%" onclick="myFunction(this);">
+  <img src="Images/1.jpg" alt="Installation view of Seeking Lavrentiya, a solo show inside a shipping container, 2017." style="width:100%" onclick="myFunction(this);">
 </div>
 </div>
 
 <div class="column">
-  <img src="images/2.jpg" alt="Installation view of Everyday is a Lifetime, a solo show inside a shipping container, 2017" style="width:100%" onclick="myFunction(this);">
+  <img src="Images/2.jpg" alt="Installation view of Everyday is a Lifetime, a solo show inside a shipping container, 2017" style="width:100%" onclick="myFunction(this);">
 </div>
 </div>
 
 <div class="column">
-  <img src="images/4.jpg" alt="Installation view of Everyday is a Lifetime, a solo show inside a shipping container, 2017" style="width:100%" onclick="myFunction(this);">
+  <img src="Images/4.jpg" alt="Installation view of Everyday is a Lifetime, a solo show inside a shipping container, 2017" style="width:100%" onclick="myFunction(this);">
 </div>
 </div>
 
