--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <!-- Actual slides -->
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img class="d-block w-100 landing_page" src="images/antimg.jpg" alt="...">
+                <img class="d-block w-100 landing_page" src="Images/antimg.jpg" alt="...">
               </div>
 
               <div class="carousel-item">
@@ -88,7 +88,7 @@
               </div>
 
               <div class="carousel-item">
-                <img class="d-block w-100 landing_page" src="images/openstudios2.jpg" alt="...">
+                <img class="d-block w-100 landing_page" src="Images/Openstudios2.jpg" alt="...">
 
               </div>
 
