--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
       <nav class="fixed-top">
 
-      <p2><a href="./main.html">Julianna Ham</a></p2>
+      <p2><a href="./index.html">Julianna Ham</a></p2>
 
         <a href="./gallery.html">portfolio</a>
 
