--- a/about.html
+++ b/about.html
@@ -100,7 +100,7 @@
     <br>
     2018 <i>Constellations,</i> School of Visual Arts, New York City
     <br>
-    2018 <i>After School</i>, Dufferin Place, Toronto
+    2018 <i>After School</i>, Abadoned warehouse on Geary St, Toronto
     <br>
     2017 <i>Scotiabank Contact Festival: Contact 99,</i> Artscape Youngplace, Toronto
     <br>
