--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <img class="d-block w-100 landing_page" src="Images/antimg.jpg" alt="...">
               </div>
 
-              <div class="carousel-item">
+             
                 <!-- <span class="swag">
                   😤😤😤😤😤😤😤😤😤
                 </span>
@@ -84,8 +84,11 @@
                 <span class="swag">
                   😤
                 </span> -->
-                <img class="d-block w-100 second_item" src="content/starterpack2.gif" class="ant">
-              </div>
+                    <div class="carousel-item">
+              <iframe class="d-block w-100 second_item" src="https://www.youtube.com/embed/K3XETRkZ_rc?controls=0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"></iframe>
+
+                          </div>
+
 
               <div class="carousel-item">
                 <img class="d-block w-100 landing_page" src="Images/Openstudios2.jpg" alt="...">
