--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                   😤
                 </span> -->
                 
-             <iframe class="d-block w-100 second_item" src="https://www.youtube.com/embed/K3XETRkZ_rc?controls=0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"></iframe>
+             <iframe class="d-block w-100 landing_page" src="https://www.youtube.com/embed/K3XETRkZ_rc?controls=0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"></iframe>
 
                           </div>
 
