--- a/about.html
+++ b/about.html
@@ -68,7 +68,7 @@
         <div class="col-md-6"> <p1 class="text-left"> <ul class="list-inline">
  <!-- <li class="list-inline-item"> <p4> -->
 
-    b. 1999 in Seoul. Lives and works in Brooklyn.
+    b. 1999 in Seoul. Lives in Queens, NY.
  <br><br>
     <p3><b>Education:</p3></b>
     <br>
@@ -133,10 +133,6 @@
    <p3><b> Speaking:</p3></b>
     <br>
     2017 <i>Art Talk 7,</i> OCAD University,  Toronto
- <br>
-   <p3><b> Press:</p3></b>
-    <br>
-    2018 Hyperallergic:<i> “SVA Students Interpret Intersectionality through a Queer Lens”</i>
  <br>
    <p3><b> Awards/Grants:</p3></b>
     <br>
